@@ -1,6 +1,7 @@
 import java.util.Iterator;
 import java.util.List;
 
+
 public class OEntityWolf extends OEntityAnimal {
 
     private boolean a = false;
@@ -13,129 +14,138 @@ public class OEntityWolf extends OEntityAnimal {
 
     public OEntityWolf(OWorld var1) {
         super(var1);
-        this.ab = "/mob/wolf.png";
+        this.ae = "/mob/wolf.png";
         this.b(0.8F, 0.8F);
-        this.aU = 1.1F;
-        this.an = 8;
+        this.bb = 1.1F;
+    }
+
+    public int c() {
+        return this.C() ? 20 : 8;
     }
 
     protected void b() {
         super.b();
-        this.bU.a(16, Byte.valueOf((byte) 0));
-        this.bU.a(17, "");
-        this.bU.a(18, new Integer(this.an));
+        this.bY.a(16, Byte.valueOf((byte) 0));
+        this.bY.a(17, "");
+        this.bY.a(18, new Integer(this.ap()));
     }
 
-    protected boolean e_() {
+    protected boolean g_() {
         return false;
     }
 
     public void b(ONBTTagCompound var1) {
         super.b(var1);
-        var1.a("Angry", this.y());
-        var1.a("Sitting", this.x());
-        if (this.w() == null) {
+        var1.a("Angry", this.B());
+        var1.a("Sitting", this.v_());
+        if (this.z() == null) {
             var1.a("Owner", "");
         } else {
-            var1.a("Owner", this.w());
+            var1.a("Owner", this.z());
         }
 
     }
 
     public void a(ONBTTagCompound var1) {
         super.a(var1);
-        this.d(var1.m("Angry"));
-        this.c(var1.m("Sitting"));
-        String var2 = var1.i("Owner");
+        this.c(var1.n("Angry"));
+        this.b(var1.n("Sitting"));
+        String var2 = var1.j("Owner");
+
         if (var2.length() > 0) {
             this.a(var2);
-            this.e(true);
+            this.d(true);
         }
 
     }
 
     protected boolean d_() {
-        return !this.z();
+        return this.B();
     }
 
-    protected String h() {
-        return this.y() ? "mob.wolf.growl" : (this.bL.nextInt(3) == 0 ? (this.z() && this.bU.b(18) < 10 ? "mob.wolf.whine" : "mob.wolf.panting") : "mob.wolf.bark");
+    protected String c_() {
+        return this.B() ? "mob.wolf.growl" : (this.bS.nextInt(3) == 0 ? (this.C() && this.bY.c(18) < 10 ? "mob.wolf.whine" : "mob.wolf.panting") : "mob.wolf.bark");
     }
 
-    protected String i() {
+    protected String m() {
         return "mob.wolf.hurt";
     }
 
-    protected String j() {
+    protected String n() {
         return "mob.wolf.death";
     }
 
-    protected float l() {
+    protected float o() {
         return 0.4F;
     }
 
-    protected int k() {
+    protected int e() {
         return -1;
     }
 
-    protected void c_() {
-        super.c_();
-        if (!this.e && !this.B() && this.z() && this.ba == null) {
-            OEntityPlayer var3 = this.bb.a(this.w());
+    protected void m_() {
+        super.m_();
+        if (!this.e && !this.E() && this.C() && this.bh == null) {
+            OEntityPlayer var3 = this.bi.a(this.z());
+
             if (var3 != null) {
-                float var2 = var3.g(this);
+                float var2 = var3.h(this);
+
                 if (var2 > 5.0F) {
                     this.c(var3, var2);
                 }
-            } else if (!this.ao()) {
-                this.c(true);
+            } else if (!this.aK()) {
+                this.b(true);
             }
-        } else if (this.d == null && !this.B() && !this.z() && this.bb.w.nextInt(100) == 0) {
-            List var1 = this.bb.a(OEntitySheep.class, OAxisAlignedBB.b(this.bf, this.bg, this.bh, this.bf + 1.0D, this.bg + 1.0D, this.bh + 1.0D).b(16.0D, 4.0D, 16.0D));
+        } else if (this.d == null && !this.E() && !this.C() && this.bi.w.nextInt(100) == 0) {
+            List var1 = this.bi.a(OEntitySheep.class, OAxisAlignedBB.b(this.bm, this.bn, this.bo, this.bm + 1.0D, this.bn + 1.0D, this.bo + 1.0D).b(16.0D, 4.0D, 16.0D));
+
             if (!var1.isEmpty()) {
-                this.d((OEntity) var1.get(this.bb.w.nextInt(var1.size())));
+                this.e((OEntity) var1.get(this.bi.w.nextInt(var1.size())));
             }
         }
 
-        if (this.ao()) {
-            this.c(false);
+        if (this.aK()) {
+            this.b(false);
         }
 
-        if (!this.bb.I) {
-            this.bU.b(18, Integer.valueOf(this.an));
+        if (!this.bi.I) {
+            this.bY.b(18, Integer.valueOf(this.ap()));
         }
 
     }
 
-    public void s() {
-        super.s();
+    public void d() {
+        super.d();
         this.a = false;
-        if (this.ae() && !this.B() && !this.y()) {
-            OEntity var1 = this.af();
+        if (this.aw() && !this.E() && !this.B()) {
+            OEntity var1 = this.ax();
+
             if (var1 instanceof OEntityPlayer) {
                 OEntityPlayer var2 = (OEntityPlayer) var1;
-                OItemStack var3 = var2.j.b();
+                OItemStack var3 = var2.k.d();
+
                 if (var3 != null) {
-                    if (!this.z() && var3.c == OItem.aV.bo) {
+                    if (!this.C() && var3.c == OItem.aW.bN) {
                         this.a = true;
-                    } else if (this.z() && OItem.c[var3.c] instanceof OItemFood) {
-                        this.a = ((OItemFood) OItem.c[var3.c]).m();
+                    } else if (this.C() && OItem.d[var3.c] instanceof OItemFood) {
+                        this.a = ((OItemFood) OItem.d[var3.c]).q();
                     }
                 }
             }
         }
 
-        if (!this.ai && this.g && !this.h && !this.B() && this.bq) {
+        if (!this.bi.I && this.g && !this.h && !this.E() && this.bx) {
             this.h = true;
             this.i = 0.0F;
             this.j = 0.0F;
-            this.bb.a(this, (byte) 8);
+            this.bi.a(this, (byte) 8);
         }
 
     }
 
-    public void s_() {
-        super.s_();
+    public void y_() {
+        super.y_();
         this.c = this.b;
         if (this.a) {
             this.b += (1.0F - this.b) * 0.4F;
@@ -144,17 +154,17 @@ public class OEntityWolf extends OEntityAnimal {
         }
 
         if (this.a) {
-            this.aV = 10;
+            this.bc = 10;
         }
 
-        if (this.an()) {
+        if (this.aJ()) {
             this.g = true;
             this.h = false;
             this.i = 0.0F;
             this.j = 0.0F;
         } else if ((this.g || this.h) && this.h) {
             if (this.i == 0.0F) {
-                this.bb.a(this, "mob.wolf.shake", this.l(), (this.bL.nextFloat() - this.bL.nextFloat()) * 0.2F + 1.0F);
+                this.bi.a(this, "mob.wolf.shake", this.o(), (this.bS.nextFloat() - this.bS.nextFloat()) * 0.2F + 1.0F);
             }
 
             this.j = this.i;
@@ -167,38 +177,40 @@ public class OEntityWolf extends OEntityAnimal {
             }
 
             if (this.i > 0.4F) {
-                float var1 = (float) this.bp.b;
+                float var1 = (float) this.bw.b;
                 int var2 = (int) (OMathHelper.a((this.i - 0.4F) * 3.1415927F) * 7.0F);
 
                 for (int var3 = 0; var3 < var2; ++var3) {
-                    float var4 = (this.bL.nextFloat() * 2.0F - 1.0F) * this.bz * 0.5F;
-                    float var5 = (this.bL.nextFloat() * 2.0F - 1.0F) * this.bz * 0.5F;
-                    this.bb.a("splash", this.bf + (double) var4, (double) (var1 + 0.8F), this.bh + (double) var5, this.bi, this.bj, this.bk);
+                    float var4 = (this.bS.nextFloat() * 2.0F - 1.0F) * this.bG * 0.5F;
+                    float var5 = (this.bS.nextFloat() * 2.0F - 1.0F) * this.bG * 0.5F;
+
+                    this.bi.a("splash", this.bm + (double) var4, (double) (var1 + 0.8F), this.bo + (double) var5, this.bp, this.bq, this.br);
                 }
             }
         }
 
     }
 
-    public float t() {
-        return this.bA * 0.8F;
+    public float y() {
+        return this.bH * 0.8F;
     }
 
-    protected int u() {
-        return this.x() ? 20 : super.u();
+    public int x() {
+        return this.v_() ? 20 : super.x();
     }
 
     private void c(OEntity var1, float var2) {
-        OPathEntity var3 = this.bb.a(this, var1, 16.0F);
+        OPathEntity var3 = this.bi.a(this, var1, 16.0F);
+
         if (var3 == null && var2 > 12.0F) {
-            int var4 = OMathHelper.b(var1.bf) - 2;
-            int var5 = OMathHelper.b(var1.bh) - 2;
-            int var6 = OMathHelper.b(var1.bp.b);
+            int var4 = OMathHelper.b(var1.bm) - 2;
+            int var5 = OMathHelper.b(var1.bo) - 2;
+            int var6 = OMathHelper.b(var1.bw.b);
 
             for (int var7 = 0; var7 <= 4; ++var7) {
                 for (int var8 = 0; var8 <= 4; ++var8) {
-                    if ((var7 < 1 || var8 < 1 || var7 > 3 || var8 > 3) && this.bb.e(var4 + var7, var6 - 1, var5 + var8) && !this.bb.e(var4 + var7, var6, var5 + var8) && !this.bb.e(var4 + var7, var6 + 1, var5 + var8)) {
-                        this.c((double) ((float) (var4 + var7) + 0.5F), (double) var6, (double) ((float) (var5 + var8) + 0.5F), this.bl, this.bm);
+                    if ((var7 < 1 || var8 < 1 || var7 > 3 || var8 > 3) && this.bi.e(var4 + var7, var6 - 1, var5 + var8) && !this.bi.e(var4 + var7, var6, var5 + var8) && !this.bi.e(var4 + var7, var6 + 1, var5 + var8)) {
+                        this.c((double) ((float) (var4 + var7) + 0.5F), (double) var6, (double) ((float) (var5 + var8) + 0.5F), this.bs, this.bt);
                         return;
                     }
                 }
@@ -210,12 +222,13 @@ public class OEntityWolf extends OEntityAnimal {
     }
 
     protected boolean v() {
-        return this.x() || this.h;
+        return this.v_() || this.h;
     }
 
     public boolean a(ODamageSource var1, int var2) {
         OEntity var3 = var1.a();
-        this.c(false);
+
+        this.b(false);
         if (var3 != null && !(var3 instanceof OEntityPlayer) && !(var3 instanceof OEntityArrow)) {
             var2 = (var2 + 1) / 2;
         }
@@ -223,9 +236,9 @@ public class OEntityWolf extends OEntityAnimal {
         if (!super.a(var1, var2)) {
             return false;
         } else {
-            if (!this.z() && !this.y()) {
+            if (!this.C() && !this.B()) {
                 if (var3 instanceof OEntityPlayer) {
-                    this.d(true);
+                    this.c(true);
                     this.d = var3;
                 }
 
@@ -234,22 +247,23 @@ public class OEntityWolf extends OEntityAnimal {
                 }
 
                 if (var3 instanceof OEntityLiving) {
-                    List var4 = this.bb.a(OEntityWolf.class, OAxisAlignedBB.b(this.bf, this.bg, this.bh, this.bf + 1.0D, this.bg + 1.0D, this.bh + 1.0D).b(16.0D, 4.0D, 16.0D));
+                    List var4 = this.bi.a(OEntityWolf.class, OAxisAlignedBB.b(this.bm, this.bn, this.bo, this.bm + 1.0D, this.bn + 1.0D, this.bo + 1.0D).b(16.0D, 4.0D, 16.0D));
                     Iterator var5 = var4.iterator();
 
                     while (var5.hasNext()) {
                         OEntity var6 = (OEntity) var5.next();
                         OEntityWolf var7 = (OEntityWolf) var6;
-                        if (!var7.z() && var7.d == null) {
+
+                        if (!var7.C() && var7.d == null) {
                             var7.d = var3;
                             if (var3 instanceof OEntityPlayer) {
-                                var7.d(true);
+                                var7.c(true);
                             }
                         }
                     }
                 }
             } else if (var3 != this && var3 != null) {
-                if (this.z() && var3 instanceof OEntityPlayer && ((OEntityPlayer) var3).u.equalsIgnoreCase(this.w())) {
+                if (this.C() && var3 instanceof OEntityPlayer && ((OEntityPlayer) var3).v.equalsIgnoreCase(this.z())) {
                     return true;
                 }
 
@@ -260,24 +274,26 @@ public class OEntityWolf extends OEntityAnimal {
         }
     }
 
-    protected OEntity o() {
-        return this.y() ? this.bb.a(this, 16.0D) : null;
+    protected OEntity k() {
+        return this.B() ? this.bi.a(this, 16.0D) : null;
     }
 
     protected void a(OEntity var1, float var2) {
-        if (var2 > 2.0F && var2 < 6.0F && this.bL.nextInt(10) == 0) {
-            if (this.bq) {
-                double var3 = var1.bf - this.bf;
-                double var5 = var1.bh - this.bh;
+        if (var2 > 2.0F && var2 < 6.0F && this.bS.nextInt(10) == 0) {
+            if (this.bx) {
+                double var3 = var1.bm - this.bm;
+                double var5 = var1.bo - this.bo;
                 float var7 = OMathHelper.a(var3 * var3 + var5 * var5);
-                this.bi = var3 / (double) var7 * 0.5D * 0.800000011920929D + this.bi * 0.20000000298023224D;
-                this.bk = var5 / (double) var7 * 0.5D * 0.800000011920929D + this.bk * 0.20000000298023224D;
-                this.bj = 0.4000000059604645D;
+
+                this.bp = var3 / (double) var7 * 0.5D * 0.800000011920929D + this.bp * 0.20000000298023224D;
+                this.br = var5 / (double) var7 * 0.5D * 0.800000011920929D + this.br * 0.20000000298023224D;
+                this.bq = 0.4000000059604645D;
             }
-        } else if ((double) var2 < 1.5D && var1.bp.e > this.bp.b && var1.bp.b < this.bp.e) {
-            this.at = 20;
+        } else if ((double) var2 < 1.5D && var1.bw.e > this.bw.b && var1.bw.b < this.bw.e) {
+            this.aw = 20;
             byte var8 = 2;
-            if (this.z()) {
+
+            if (this.C()) {
                 var8 = 4;
             }
 
@@ -287,55 +303,58 @@ public class OEntityWolf extends OEntityAnimal {
     }
 
     public boolean b(OEntityPlayer var1) {
-        OItemStack var2 = var1.j.b();
-        if (!this.z()) {
-            if (var2 != null && var2.c == OItem.aV.bo && !this.y()) {
+        OItemStack var2 = var1.k.d();
+
+        if (!this.C()) {
+            if (var2 != null && var2.c == OItem.aW.bN && !this.B()) {
                 --var2.a;
                 if (var2.a <= 0) {
-                    var1.j.a(var1.j.c, (OItemStack) null);
+                    var1.k.a(var1.k.c, (OItemStack) null);
                 }
 
-                if (!this.bb.I) {
+                if (!this.bi.I) {
                     // CanaryMod hook: onTame
                     // randomize the tame result. if its 0 - tame success.
-                    int tameResult = this.bL.nextInt(3);
+                    int tameResult = this.bS.nextInt(3);
                     // Call hook
-                    PluginLoader.HookResult res = (PluginLoader.HookResult) manager.callHook(PluginLoader.Hook.TAME, manager.getServer().getPlayer(var1.u), new Mob(this), tameResult == 0);
+                    PluginLoader.HookResult res = (PluginLoader.HookResult) manager.callHook(PluginLoader.Hook.TAME, manager.getServer().getPlayer(var1.v), new Mob(this), tameResult == 0);
+
                     // if taming succeeded normally (tameResult == 0) or plugin hook result is allow (force taming)
                     if (tameResult == 0 && res == PluginLoader.HookResult.DEFAULT_ACTION || res == PluginLoader.HookResult.ALLOW_ACTION) {
-                        this.e(true);
+                        this.d(true);
                         this.a((OPathEntity) null);
-                        this.c(true);
-                        this.an = 20;
-                        this.a(var1.u);
                         this.b(true);
-                        this.bb.a(this, (byte) 7);
+                        this.i(20);
+                        this.a(var1.v);
+                        this.a(true);
+                        this.bi.a(this, (byte) 7);
                     } else {
-                        this.b(false);
-                        this.bb.a(this, (byte) 6);
+                        this.a(false);
+                        this.bi.a(this, (byte) 6);
                     }
                 }
 
                 return true;
             }
         } else {
-            if (var2 != null && OItem.c[var2.c] instanceof OItemFood) {
-                OItemFood var3 = (OItemFood) OItem.c[var2.c];
-                if (var3.m() && this.bU.b(18) < 20) {
+            if (var2 != null && OItem.d[var2.c] instanceof OItemFood) {
+                OItemFood var3 = (OItemFood) OItem.d[var2.c];
+
+                if (var3.q() && this.bY.c(18) < 20) {
                     --var2.a;
-                    this.c(var3.k());
+                    this.d(var3.o());
                     if (var2.a <= 0) {
-                        var1.j.a(var1.j.c, (OItemStack) null);
+                        var1.k.a(var1.k.c, (OItemStack) null);
                     }
 
                     return true;
                 }
             }
 
-            if (var1.u.equalsIgnoreCase(this.w())) {
-                if (!this.bb.I) {
-                    this.c(!this.x());
-                    this.aS = false;
+            if (var1.v.equalsIgnoreCase(this.z())) {
+                if (!this.bi.I) {
+                    this.b(!this.v_());
+                    this.aZ = false;
                     this.a((OPathEntity) null);
                 }
 
@@ -343,75 +362,84 @@ public class OEntityWolf extends OEntityAnimal {
             }
         }
 
-        return false;
+        return super.b(var1);
     }
 
-    void b(boolean var1) {
+    void a(boolean var1) {
         String var2 = "heart";
+
         if (!var1) {
             var2 = "smoke";
         }
 
         for (int var3 = 0; var3 < 7; ++var3) {
-            double var4 = this.bL.nextGaussian() * 0.02D;
-            double var6 = this.bL.nextGaussian() * 0.02D;
-            double var8 = this.bL.nextGaussian() * 0.02D;
-            this.bb.a(var2, this.bf + (double) (this.bL.nextFloat() * this.bz * 2.0F) - (double) this.bz, this.bg + 0.5D + (double) (this.bL.nextFloat() * this.bA), this.bh + (double) (this.bL.nextFloat() * this.bz * 2.0F) - (double) this.bz, var4, var6, var8);
+            double var4 = this.bS.nextGaussian() * 0.02D;
+            double var6 = this.bS.nextGaussian() * 0.02D;
+            double var8 = this.bS.nextGaussian() * 0.02D;
+
+            this.bi.a(var2, this.bm + (double) (this.bS.nextFloat() * this.bG * 2.0F) - (double) this.bG, this.bn + 0.5D + (double) (this.bS.nextFloat() * this.bH), this.bo + (double) (this.bS.nextFloat() * this.bG * 2.0F) - (double) this.bG, var4, var6, var8);
         }
 
     }
 
-    public int m() {
+    public int p() {
         return 8;
     }
 
-    public String w() {
-        return this.bU.c(17);
+    public String z() {
+        return this.bY.d(17);
     }
 
     public void a(String var1) {
-        this.bU.b(17, var1);
+        this.bY.b(17, var1);
     }
 
-    public boolean x() {
-        return (this.bU.a(16) & 1) != 0;
+    public boolean v_() {
+        return (this.bY.a(16) & 1) != 0;
+    }
+
+    public void b(boolean var1) {
+        byte var2 = this.bY.a(16);
+
+        if (var1) {
+            this.bY.b(16, Byte.valueOf((byte) (var2 | 1)));
+        } else {
+            this.bY.b(16, Byte.valueOf((byte) (var2 & -2)));
+        }
+
+    }
+
+    public boolean B() {
+        return (this.bY.a(16) & 2) != 0;
     }
 
     public void c(boolean var1) {
-        byte var2 = this.bU.a(16);
+        byte var2 = this.bY.a(16);
+
         if (var1) {
-            this.bU.b(16, Byte.valueOf((byte) (var2 | 1)));
+            this.bY.b(16, Byte.valueOf((byte) (var2 | 2)));
         } else {
-            this.bU.b(16, Byte.valueOf((byte) (var2 & -2)));
+            this.bY.b(16, Byte.valueOf((byte) (var2 & -3)));
         }
 
     }
 
-    public boolean y() {
-        return (this.bU.a(16) & 2) != 0;
+    public boolean C() {
+        return (this.bY.a(16) & 4) != 0;
     }
 
     public void d(boolean var1) {
-        byte var2 = this.bU.a(16);
+        byte var2 = this.bY.a(16);
+
         if (var1) {
-            this.bU.b(16, Byte.valueOf((byte) (var2 | 2)));
+            this.bY.b(16, Byte.valueOf((byte) (var2 | 4)));
         } else {
-            this.bU.b(16, Byte.valueOf((byte) (var2 & -3)));
+            this.bY.b(16, Byte.valueOf((byte) (var2 & -5)));
         }
 
     }
 
-    public boolean z() {
-        return (this.bU.a(16) & 4) != 0;
-    }
-
-    public void e(boolean var1) {
-        byte var2 = this.bU.a(16);
-        if (var1) {
-            this.bU.b(16, Byte.valueOf((byte) (var2 | 4)));
-        } else {
-            this.bU.b(16, Byte.valueOf((byte) (var2 & -5)));
-        }
-
+    protected OEntityAnimal a(OEntityAnimal var1) {
+        return new OEntityWolf(this.bi);
     }
 }
